@@ -4,6 +4,7 @@ using System.Linq;
 using System.Web;
 using System.Web.Mvc;
 using AjModel.WebMvc.ViewModel;
+using AjModel.WebMvc.Models;
 
 namespace AjModel.WebMvc.Controllers
 {
@@ -12,6 +13,8 @@ namespace AjModel.WebMvc.Controllers
         public ActionResult Index()
         {
             var model = new EntityListViewModel();
+            model.Entities = Domain.Instance.Customers;
+            model.EntityModel = new EntityModel(typeof(Customer));
             return View(model);
         }
     }
